{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 215,
  "lineage": "4087c6f2-116c-180e-0628-2983ae513e8b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03943ee68bc7a2103",
            "public_dns": "ec2-54-68-233-29.us-west-2.compute.amazonaws.com",
            "public_ip": "54.68.233.29",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pivot_gocd_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07dd19a7900a1f049",
            "arn": "arn:aws:ec2:us-west-2:276264014537:instance/i-06828eb97ea7f5d19",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06828eb97ea7f5d19",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "amazonkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-024a148e1ddb73a2d",
            "private_dns": "ip-10-0-1-35.us-west-2.compute.internal",
            "private_ip": "10.0.1.35",
            "public_ip": "34.214.184.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01f2c6a4efb6a1471",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0374487dafaf64d14",
            "tags": {
              "Name": "jumpbox"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0384e9625229fd36d"
            ]
          },
          "dependencies": [
            "aws_security_group.aksecurity",
            "aws_subnet.subnet_public",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07dd19a7900a1f049",
            "arn": "arn:aws:ec2:us-west-2:276264014537:instance/i-09e074921d1085867",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e074921d1085867",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "amazonkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f4a341e9ee716720",
            "private_dns": "ip-10-0-3-39.us-west-2.compute.internal",
            "private_ip": "10.0.3.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0374402bd67d65103",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c67566a1e744fd30",
            "tags": {
              "Name": "pvtinstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0384e9625229fd36d"
            ]
          },
          "dependencies": [
            "aws_security_group.aksecurity",
            "aws_subnet.subnet_pvt",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:276264014537:internet-gateway/igw-05d16f7466e0e9c4e",
            "id": "igw-05d16f7466e0e9c4e",
            "owner_id": "276264014537",
            "tags": {
              "Name": "akigw"
            },
            "vpc_id": "vpc-09cd8e12dc9b854e3"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03943ee68bc7a2103",
            "id": "nat-0876001d144809505",
            "network_interface_id": "eni-0bc8229c2cbb1a28b",
            "private_ip": "10.0.1.122",
            "public_ip": "54.68.233.29",
            "subnet_id": "subnet-0374487dafaf64d14",
            "tags": {
              "Name": "aknatgw"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.subnet_public",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b030be1bbea466d5",
            "owner_id": "276264014537",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d16f7466e0e9c4e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetablepub"
            },
            "vpc_id": "vpc-09cd8e12dc9b854e3"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_routable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b20b42fd8d95095f",
            "owner_id": "276264014537",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0876001d144809505",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetablepvt"
            },
            "vpc_id": "vpc-09cd8e12dc9b854e3"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.subnet_public",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e77851bafb456857",
            "route_table_id": "rtb-0b030be1bbea466d5",
            "subnet_id": "subnet-0374487dafaf64d14"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.public_routable",
            "aws_subnet.subnet_public",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0676acd65d68be173",
            "route_table_id": "rtb-0b030be1bbea466d5",
            "subnet_id": "subnet-047a59a6f67b57e14"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.public_routable",
            "aws_subnet.subnet_public_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060a2edeb08d77408",
            "route_table_id": "rtb-0b20b42fd8d95095f",
            "subnet_id": "subnet-0c67566a1e744fd30"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.pvt_routable",
            "aws_subnet.subnet_public",
            "aws_subnet.subnet_pvt",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d39ca596060d583",
            "route_table_id": "rtb-0b20b42fd8d95095f",
            "subnet_id": "subnet-05c0940aa28d84adf"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.pvt_routable",
            "aws_subnet.subnet_public",
            "aws_subnet.subnet_pvt_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aksecurity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:276264014537:security-group/sg-0384e9625229fd36d",
            "description": "Allow ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0384e9625229fd36d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aksecurity",
            "name_prefix": null,
            "owner_id": "276264014537",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aksecurity"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cd8e12dc9b854e3"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:276264014537:subnet/subnet-0374487dafaf64d14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0374487dafaf64d14",
            "map_public_ip_on_launch": true,
            "owner_id": "276264014537",
            "tags": {
              "Name": "aksubnetpub"
            },
            "vpc_id": "vpc-09cd8e12dc9b854e3"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:276264014537:subnet/subnet-047a59a6f67b57e14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-047a59a6f67b57e14",
            "map_public_ip_on_launch": true,
            "owner_id": "276264014537",
            "tags": {
              "Name": "aksubnetpub-1"
            },
            "vpc_id": "vpc-09cd8e12dc9b854e3"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:276264014537:subnet/subnet-0c67566a1e744fd30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c67566a1e744fd30",
            "map_public_ip_on_launch": false,
            "owner_id": "276264014537",
            "tags": {
              "Name": "aksubnetpvt"
            },
            "vpc_id": "vpc-09cd8e12dc9b854e3"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_pvt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:276264014537:subnet/subnet-05c0940aa28d84adf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-05c0940aa28d84adf",
            "map_public_ip_on_launch": false,
            "owner_id": "276264014537",
            "tags": {
              "Name": "aksubnetpvt-1"
            },
            "vpc_id": "vpc-09cd8e12dc9b854e3"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:276264014537:vpc/vpc-09cd8e12dc9b854e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0575934256afda4f7",
            "default_route_table_id": "rtb-0453cb88f81e7ba2f",
            "default_security_group_id": "sg-0af2ce4c4031f417a",
            "dhcp_options_id": "dopt-7aa1d102",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09cd8e12dc9b854e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0453cb88f81e7ba2f",
            "owner_id": "276264014537",
            "tags": {
              "Name": "atulvpc"
            }
          }
        }
      ]
    }
  ]
}